Add several more tests, discovering #23 in the process
Raise test coverage requirement to 75%